# wikigraph

./: .gitignore  COPYING  Makefile  README  README.md  analyze.coffee  analyze.js  categories.cpp  conf.py  config.h  generate_graph.cpp  graph.cpp  index.html  langcodes.py  lint.sh  logger.py  page.cpp  pagelinks.cpp  process_graph.cpp  sqlparser.h  state.json  writerlib.h  xmlparse.py
OLD/: config.h  graphlib.h
info/: getlangcodes.sh
mysqldumps/: localdump-category.sql  localdump-categorylinks.sql  localdump-page.sql  localdump-pagelinks.sql  localdump-redirect.sql
report/: 2007.html  OLD_analyze.js  analyze.js  index.js  index.tpl
src/: .clang_complete  CMakeLists.txt  config.h.in  file_gzio.h  file_io.h  gen_graph.cc  graph.h  graph_algo.h  hash.h  mock_writerlib.h  print_graph.cc  process_graph.cc  process_graph.cpp  redis.h  run_tests.cc  sql_parser.h  test_writerlib.cc  wikigraph-stubs-internal.h  wikigraph-stubs-public.h  wikigraph_stubs_internal.h  wikigraph_stubs_public.h  writerlib.h
src/tests/: mock_file_io.h  mock_graph.h  mock_writerlib.h  run_tests.cc  test_file_gzio.cc  test_file_io.cc  test_graph.cc  test_graph_algo.cc  test_hash.cc  test_redis_util.cc  test_sql_parser.cc  test_writerlib.cc
